fixed misalignments and event order

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,8 +49,8 @@ body{
 		line-height: 1.2;
 		width: 50%;
 		margin-left: 25%;
-		h4{
-			margin-top: 2em;
+		h1{
+			margin-top: -70px;
 		}
 	}
 	margin-bottom: 50px;
@@ -72,13 +72,12 @@ body{
 	line-height: 1.5;
 	padding: 1.5rem;
 	.about-content{
-		font-size: 20px;
+		font-size: 1.3em;
 		margin-top: 30px;
-		width: 60%;
+		width: 80%;
 		margin-left: 50%;	
 		transform: translateX(-50%);
-		letter-spacing: 1px;
-		word-spacing: 2px;
+		word-spacing: 1px;
 	}
 
 }
@@ -87,7 +86,7 @@ body{
 	min-height: 40vh;
 	width: 100%;
 	text-align: center;
-	margin-top: 150px;
+	margin-top: 200px;
 	.event-content{
 		margin-top: 20px;
 		margin-left: 50%;
@@ -95,7 +94,7 @@ body{
 		min-height: 100px;
 		min-width: 300px;
 		.event-container{
-			padding: 1rem;
+			padding: 2rem;
 			border-radius: 1rem;
 			box-shadow: 0px 0px 1px black;
 			min-width: 300px;
